# scoialrobot

./: CMakeLists.txt  Evaluation.md  FalsePositivesRemoval.md  HeadParameters.md  Installation.md  Kinect.md  Matchingdistance.md  Members.md  Preprocessing.md  ProjectHome.md  ProjectPlan.md  RGBDetector.md  References.md  SoftwareArchitecture.md  TableOfContents.md  TorsoOrientation.md  Tracking.md
social_robot/: CMakeLists.txt  README  mainpage.dox  manifest.xml
social_robot/documentation/html/: CMakeCCompilerId_8c.html  ConfusionMatrix_8cpp__incl.md5  ConfusionMatrix_8h.html  ConfusionMatrix_8h__dep__incl.map  CvUtils_8cpp.html  CvUtils_8cpp.js  CvUtils_8cpp__dep__incl.md5  CvUtils_8cpp__incl.map  CvUtils_8cpp__incl.md5  CvUtils_8h.html  CvUtils_8h.js  CvUtils_8h__dep__incl.map  CvUtils_8h__dep__incl.md5  CvUtils_8h__incl.map  CvUtils_8h__incl.md5  DepthFaceDetector_8cpp__incl.map  DepthFaceDetector_8cpp__incl.md5  DepthFaceDetector_8h.html  DepthFaceDetector_8h__dep__incl.map  DepthFaceDetector_8h__dep__incl.md5  DepthFaceDetector_8h__incl.map  DepthFaceDetector_8h__incl.md5  PixelSimilarity_8cpp.html  PixelSimilarity_8cpp__dep__incl.md5  PixelSimilarity_8cpp__incl.md5  PixelSimilarity_8h.html  PixelSimilarity_8h__dep__incl.map  PixelSimilarity_8h__dep__incl.md5  PixelSimilarity_8h__incl.map  PixelSimilarity_8h__incl.md5  RegionOfInterests_8h.html  RegionOfInterests_8h__dep__incl.map  RegionOfInterests_8h__dep__incl.md5  RosUtils_8cpp.html  RosUtils_8cpp__dep__incl.md5  RosUtils_8cpp__incl.md5  RosUtils_8h.html  RosUtils_8h__dep__incl.map  RosUtils_8h__incl.md5  SocialRobotGui_8cpp.html  (+354 more)
social_robot/documentation/html/search/: all_5f.html  all_5f.js  all_61.js  all_62.js  all_63.html  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.html  all_68.js  all_69.js  all_6b.html  all_6c.js  (+115 more)
social_robot/documentation/latex/: ConfusionMatrix_8cpp__incl.md5  ConfusionMatrix_8h.tex  CvUtils_8cpp.tex  CvUtils_8cpp__incl.eps  CvUtils_8cpp__incl.md5  CvUtils_8h__dep__incl.md5  CvUtils_8h__incl.md5  DepthFaceDetector_8cpp.tex  DepthFaceDetector_8cpp__incl.md5  DepthFaceDetector_8h.tex  PixelSimilarity_8cpp.tex  PixelSimilarity_8cpp__incl.eps  PixelSimilarity_8cpp__incl.md5  PixelSimilarity_8h.tex  PixelSimilarity_8h__dep__incl.md5  PixelSimilarity_8h__incl.eps  RegionOfInterests_8h__dep__incl.eps  RegionOfInterests_8h__incl.eps  RegionOfInterests_8h__incl.md5  RosUtils_8cpp.tex  RosUtils_8cpp__dep__incl.md5  RosUtils_8cpp__incl.md5  RosUtils_8h.tex  RosUtils_8h__dep__incl.md5  RosUtils_8h__incl.eps  RosUtils_8h__incl.md5  SocialRobotGui_8cpp.tex  SocialRobotGui_8cpp__incl.md5  SocialRobotGui_8h.tex  SocialRobotGui_8h__dep__incl.eps  SocialRobotGui_8h__dep__incl.md5  SocialRobotGui_8h__incl.eps  SocialRobotGui_8h__incl.md5  StateData_8cpp.tex  StateData_8cpp__incl.md5  StateData_8h.tex  StateData_8h__dep__incl.md5  StateData_8h__incl.eps  Template_8cpp.tex  Template_8cpp__incl.eps  (+170 more)
social_robot/msg/: RegionOfInterests.msg
social_robot/rsrc/calib/: default.xml  image_list.xml  out_camera_data.xml
social_robot/src/: ConfusionMatrix.cpp  ConfusionMatrix.h  CvUtils.cpp  CvUtils.h  DepthFaceDetector.cpp  DepthFaceDetector.h  ImageHandler.h  PixelSimilarity.cpp  RosUtils.cpp  SocialRobotGui.cpp  SocialRobotGui.h  Template.cpp  Template.h  chamfer.cpp  cv_utils.cpp  cv_utils.h  kinect_proxy.cpp  kinect_proxy.h  kinect_save_image.cpp  preprocessing.cpp  social_robot.cpp  social_robot_constants.h  social_robot_depth.cpp  social_robot_main.cpp  social_robot_rgb.cpp  social_robot_test.cpp  string_utils.cpp
social_robot/src/deprecated/: social_robot_onethread.cpp
social_robot/src/ground_truth_maker/: compare.cpp  compare_ground_truth.cpp  create_ground_truth.cpp  rgbWriter.cpp
social_robot/src/particle_filter/: StateData.cpp  StateData.h  condens.cpp  filter.cpp  filter.h  hist.cpp  hist.h  lbp.cpp
social_robot/src/srgui/: gui.cpp  gui.h  gui.ui  srgui.pro  window_QT.cpp  window_QT.h  window_QT.qrc
trunk/social_robot/: CMakeLists.txt  manifest.xml
trunk/social_robot/launch/: social_robot.launch
trunk/social_robot/src/: CvUtils.cpp  CvUtils.h  DepthFaceDetector.cpp  DepthFaceDetector.h  Doxyfile  ImageHandler.h  PixelSimilarity.h  RosUtils.cpp  RosUtils.h  SocialRobotGui.cpp  SocialRobotGui.h  Template.cpp  Template.h  chamfer.cpp  cv_utils.cpp  cv_utils.h  kinect_proxy.cpp  kinect_proxy.h  mainpage.h  preprocessing.cpp  social_robot.cpp  social_robot_constants.h  social_robot_depth.cpp  social_robot_rgb.cpp  social_robot_test.cpp  string_utils.cpp  string_utils.h  templmatch.cpp
(+789 files in other folders)
